[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtlib"
version = "0.0.0.dev1"
authors = [
  { name="Jeffrey Bonde", email="jeffrey.bonde@gmail.com" },
]
description = "A small package of basic data structures and algorithms"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bondeje/dtlib"
"Bug Tracker" = "https://github.com/bondeje/dtlib/issues"